fixes on mobile displays

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body{
   display: flex;
   justify-content: space-between;
   font-size: 30px;
+  z-index:1 !important;
 }
 #title{
   color: white;
@@ -60,10 +61,9 @@ main{
   text-align: center;
 }
 .text-box{
-  display: flex;
-  flex-direction: column;
-  justify-content:  center;
-  align-items: center;
+  display: block;
+
+  text-align: center;
 }
 #Welcome h1{
   font-size: 60px;
@@ -148,7 +148,17 @@ height: 100vh;
 max-width: 100%;
 text-align: center;
 }
+/* FIXME: frame going over fixed header */
+.airbnb-embed-frame{
+
+}
 @media screen and (max-width: 956px){
+  .contact-list{
+  display: flex;
+  flex-direction: column;
+  justify-content:  center;
+
+  }
   #title{
     line-height: 50px;
   }
@@ -161,6 +171,8 @@ text-align: center;
   .facilities{
     display:flex;
     flex-direction:column;
+    justify-content: center;
+    align-items: center;
   }
   .column {
     flex: 50%;
